[package]
name = "programming-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = "0.13.1"
hmac = "0.12"
sha2 = "0.10"
ripemd = "0.1"
num-bigint = "0.4"
rand = "0.8"
hex = "0.4"
reqwest = {version= "0.12.9", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }

[lib]
doctest = false
